Revision history for Dist-Zilla-Plugin-GitHubREADME-Badge

{{$NEXT}}
        - add tests

0.14  2015-04-29 18:04:04 CST
        - small url fixes from Mishin

0.13  2015-04-27 09:17:02 CST
        - no code changes

0.12  2015-04-27 09:15:11 CST
        - more tags from mishin

0.11  2015-04-09 08:46:36 CST
        - fixes from mishin

0.10  2015-04-06 16:35:09 CST
        - update POD

0.09  2015-04-06 16:32:46 CST
        - add cpants to defaults
        - add GitHub issues badge

0.08  2015-03-25 08:40:40 CST
        - fix for cpants

0.07  2015-03-25 08:34:24 CST
        - add cpants by Nikolay Mishin (mishin)

0.06  2014-11-05 10:00:08 CST
        - for a 'Failed: PAUSE indexer report'

0.05  2014-11-05 09:42:24 CST
        - under wrong PAUSE account

0.04  2014-11-05 09:26:04 CST
        - search with .md, .mkdn, .markdown (gh#1)

0.03  2014-09-22 19:43:33 CST
        - add args place (top or bottom)

0.02  2014-09-22 19:12:02 CST
        - pass to FAYLAND

0.01  2014-09-22 19:06:46 CST
        - Initial release