@@ -5,12 +5,16 @@ use 5.008_005;
 our $VERSION = '0.14';
 
 use Moose;
+use Moose::Util::TypeConstraints qw(enum);
 use namespace::autoclean;
 use Dist::Zilla::File::OnDisk;
 use Path::Tiny;
 
 # same as Dist::Zilla::Plugin::ReadmeAnyFromPod
-with 'Dist::Zilla::Role::AfterBuild';
+with qw(
+  Dist::Zilla::Role::AfterBuild
+  Dist::Zilla::Role::AfterRelease
+);
 
 has badges => (
     is      => 'rw',
@@ -21,7 +25,23 @@ sub mvp_multivalue_args { ('badges') }
 
 has 'place' => ( is => 'rw', isa => 'Str', default => sub { 'top' } );
 
+has phase => (
+    is      => 'ro',
+    isa     => enum([qw(build release)]),
+    default => 'build',
+);
+
 sub after_build {
+    my ($self) = @_;
+    $self->add_badges if $self->phase eq 'build';
+}
+
+sub after_release {
+    my ($self) = @_;
+    $self->add_badges if $self->phase eq 'release';
+}
+
+sub add_badges {
     my ($self) = @_;
 
     my $distname = $self->zilla->name;
@@ -99,6 +119,7 @@ Dist::Zilla::Plugin::GitHubREADME::Badge - Dist::Zilla - add badges to github RE
     badges = license
     badges = version
     place = bottom
+    phase = release
 
 =head1 DESCRIPTION
 
@@ -124,6 +145,14 @@ default goes to travis, coveralls and cpants.
     place = bottom
 
 top or bottom. default to top
+
+=head2 phase
+
+    [GitHubREADME::Badge]
+    phase = release
+
+Which Dist::Zilla phase to add the badges: build or release.
+The default is build.
 
 =head1 SEE ALSO
 
