@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-Plugin-GitHubREADME-Badge
 
 {{$NEXT}}
         - add tests
+        - add 'phase' attribute to enable after-release instead of after-build
 
 0.14  2015-04-29 18:04:04 CST
         - small url fixes from Mishin
